# game-dev-with-rust

./: .gitignore  MathForGames.md  README.md
another-space-invader/: Cargo.toml
another-space-invader/src/: main.rs
bevy/: Cargo.toml
bevy/another-space-invader/: Cargo.toml
bevy/another-space-invader/src/: main.rs
bevy/baller-game/: Cargo.toml
bevy/baller-game/src/game/: mod.rs
bevy/baller-game/src/main_menu/: components.rs  styles.rs
bevy/bevy-getting-started/: Cargo.toml
bevy/boxes/: Cargo.toml
bevy/boxes/src/: components.rs  globals.rs  main.rs  systems.rs
bevy/boxes/src/board/: resources.rs  systems.rs
bevy/boxes/src/player/: components.rs  systems.rs
bevy/crayz-invaders/: Cargo.toml
bevy/crayz-invaders/assets/: enemy_01.xcf
bevy/crayz-invaders/src/: components.rs  constant.rs  enemy.rs  enemy_formation.rs  main.rs  player.rs  resources.rs
bevy/escape-of-triangle/: Cargo.toml
bevy/escape-of-triangle/src/: constants.rs  main.rs  systems.rs
bevy/fly/: Cargo.toml
bevy/fly/src/: components.rs  constants.rs  game_play.rs  systems.rs
bevy/learning-bevy-ecs/: Cargo.toml
bevy/learning-bevy-ecs/src/: main.rs
bevy/on-my-way/: Cargo.toml
bevy/on-my-way/assets/: License.txt
bevy/on-my-way/src/: events.rs  main.rs  systems.rs
bevy/on-my-way/src/main_menu/: styles.rs
bevy/one-more-time/: Cargo.toml
bevy/one-more-time/.cargo/: config.toml
bevy/one-more-time/src/: builder.rs  common.rs  constants.rs  enums.rs  main.rs  plugins.rs  resources.rs  systems.rs
bevy/red-berrets/: Cargo.toml
bevy/red-berrets/src/: main.rs
bevy/red-berrets/src/game/: components.rs  mod.rs  plugins.rs  systems.rs
bevy/red-berrets/src/global/: mod.rs  states.rs  systems.rs
bevy/red-berrets/src/menu/: plugins.rs  states.rs  systems.rs
bevy/red-berrets/src/splash/: mod.rs
bevy/red-berrets/src/utility/: mod.rs
bevy/shuttle_game/: Cargo.toml
bevy/shuttle_game/assets/: crate.glb  missile.glb  planet_3.glb
bevy/shuttle_game/src/: log.rs  planner.rs
find-the-mines/: Cargo.toml  Readme.md
find-the-mines/board_plugin/: Cargo.toml
find-the-mines/board_plugin/src/: lib.rs
find-the-mines/board_plugin/src/components/: coordinate.rs  coordinates.rs  mod.rs
find-the-mines/board_plugin/src/resources/: board_options.rs  mod.rs  tile.rs  tile_map.rs
find-the-mines/src/: main.rs
garbage/dragon-fighter/: Cargo.toml
garbage/dragon-fighter/assets/: room_map.txt
garbage/dragon-fighter/src/: constant.rs  main.rs
garbage/dragon-fighter/src/system/: camera.rs  mod.rs  player.rs  texture.rs  tiler.rs
ggez/: Cargo.toml
ggez/ggez_101/: Cargo.toml
ggez/ggez_101/src/: game.rs  main.rs  mouse.rs
ggez/ping_pong/: Cargo.toml
ggez/ping_pong/src/: main.rs  main_state.rs  player.rs
ggez/radar/: Cargo.toml
ggez/radar/src/: main.rs
ggez/rockstroid/: Cargo.toml
ggez/rockstroid/src/: game_assets.rs  main_state.rs  player.rs  sprite_builder.rs  sprite_type.rs
jumper/: Cargo.toml
jumper/src/: constants.rs  main.rs
jumper/src/shapes/: mod.rs  pipe.rs  pipe_bundle.rs  pipe_type.rs  square.rs
jumper/src/systems/: mod.rs  movement.rs  setup.rs
macroquad/: Cargo.toml
macroquad/fire-and-forget/src/: main.rs  rusty.rs
macroquad/math101/: Cargo.toml
macroquad/missile-commander/: Cargo.toml
macroquad/missile-commander/src/: main.rs
macroquad/missile-commander/src/entity/: turret.rs
macroquad/missile-commander/src/game/: mod.rs  utility.rs
macroquad/missile-commander/src/stage/: builder.rs  mod.rs
macroquad/walls_coming/: Cargo.toml
macroquad/walls_coming/src/: ball.rs  block.rs  collider.rs  constant.rs  game_state.rs  main.rs  player.rs  texturer.rs
macroquad/wing-pilot-2042/src/entity/: asset.rs  asset_type.rs  bullet.rs  bullet_type.rs  enemy.rs  fighter.rs  formation.rs  mod.rs
macroquad/wing-pilot-2042/src/game/: collider.rs  mod.rs  scorebox.rs
macroquad/wing-pilot-2042/src/menu/: builder.rs
macroquad/wing-pilot-2042/static/: gl.js  index.html
macroquad/wolf-tank/src/: bullet.rs  constant.rs  game_state.rs  garrison.rs  helper.rs  menu.rs  resource.rs  tank.rs
misc/slam-dunk-manager/: Cargo.toml  GDD.md
misc/slam-dunk-manager/src/: lib.rs
misc/slam-dunk-manager/src/data/: model.rs  players.rs
misc/slam-dunk-manager/src/game_mngr/: market.rs  menus.rs  mod.rs
misc/slam-dunk-manager/src/util/: utility.rs
misc/slam-dunk-manager/tests/: ui_tests.rs  unit_tests.rs
piston/: Cargo.toml
piston/pacman/: Cargo.toml
piston/pacman/src/: main.rs
piston/pacman/src/common/: direction.rs  utility.rs
piston/pacman/src/engine/: controller.rs
piston/pacman/src/entities/: ghosts.rs  map.rs  pacman.rs  pellets.rs
piston/spining-square/: Cargo.toml
piston/spining-square/src/: app.rs  main.rs
sdl2/: Cargo.toml
sdl2/lunar_landing/: Cargo.toml  gdd.md
sdl2/lunar_landing/src/: game.rs  utility.rs
sdl2/lunar_landing/src/entity/: landing_platform.rs  meteor.rs  meteor_type.rs  mod.rs  shuttle.rs  star.rs
sdl2/lunar_landing/src/setup/: config.rs
sdl2/lunar_landing/src/ui/: hud.rs  main_menu.rs  mod.rs
sdl2/mathventure/: Cargo.toml  Readme.md
sdl2/mathventure/document/: gdd.md
sdl2/mathventure/src/: game.rs  tests.rs
sdl2/mathventure/src/entity/: block.rs  mod.rs  player.rs  question.rs  ufo.rs
sdl2/mathventure/src/factory/: asset_manager.rs  engine.rs  engine_builder.rs  screen.rs
sdl2/mathventure/src/resources/: constant.rs  levels.rs
sdl2/mathventure/src/ui/: game_over_menu.rs  main_menu.rs  mod.rs
sdl2/mono-bird/: Cargo.toml
sdl2/mono-bird/src/: game.rs
slam-dunk-manager/: Cargo.toml  GDD.md  GDG.md  Readme.md
slam-dunk-manager/src/: lib.rs  main.rs
slam-dunk-manager/src/data/: constants.rs  mod.rs  model.rs  players.rs  teams.rs
slam-dunk-manager/src/game/: game.rs  league.rs  market.rs  match.rs  mod.rs  team.rs
slam-dunk-manager/src/game_mngr/: contest.rs  game.rs  league.rs
slam-dunk-manager/src/ui/: colors.rs  mod.rs  terminal.rs  view.rs
slam-dunk-manager/src/util/: mod.rs  utility.rs
slam-dunk-manager/tests/: integration_tests.rs  ui_tests.rs  unit_tests.rs
(+545 files in other folders)
