[package]
name = "jumper"
version = "0.1.0"
edition = "2021"
description = " A simple 2D platform game for learning bevy"
authors = ["Burak Selim Senyurt"]

[dependencies]
bevy = {version = "0.10.1", features = ["dynamic_linking"]}
bevy_rapier2d = "0.21.0"
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
