# Piston workspace — run from this folder: cargo check --workspace
[workspace]
resolver = "2"

members = ["pacman", "spining-square"]

[workspace.dependencies]
piston = "1.0.0"
piston-texture = "0.9.0"
piston2d-graphics = "0.45.0"
pistoncore-glutin_window = "0.73.2"
piston2d-opengl_graphics = "0.89.0"
piston_window = "0.147.0"
