# SDL2 workspace — run from this folder: cargo check --workspace
[workspace]
resolver = "2"

members = [
    "lunar_landing",
    "mathventure",
    "mono-bird",
]

[workspace.dependencies]
sdl2   = { version = "0.38.0", features = ["ttf", "image"] }
rand   = "0.10.1"
serde  = { version = "1.0.197", features = ["derive"] }
toml   = "1.1.2+spec-1.1.0"
