[package]
name = "another-space-invader"
description = "Bevy oyun motoru bilgilerini pekiştirmek için yazılan bir space invader klonu"
authors = ["Burak Selim Senyurt"]
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
rand = { workspace = true }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

