[package]
name = "board_plugin"
version = "0.1.0"
edition = "2021"

[features]
default=[]
# for inspector and colored debugging
debug = ["colored","bevy-inspector-egui"]

[dependencies]
# game engine
bevy = "0.9.1"
# for json serialization
serde = "1.0.150"
# for creating randoms
rand = "0.8.5"
colored = {version="2.0.0",optional=true}
bevy-inspector-egui = {version = "0.14.0", optional=true}
