[package]
name = "dragon-fighter"
version = "0.1.0"
edition = "2021"
description = "A simple bevy game to learning game development"
authors = ["Burak Selim Şenyurt"]

[dependencies]
bevy = "0.8.1"
bevy-inspector-egui = "0.13.0" # Çalışma zamanında ortam nesnelerini debug modda izleyebileceğimiz güzel bir eklenti
