[package]
name = "rockstroid"
version = "0.1.0"
edition = "2021"
authors = ["Burak Selim Senyurt"]
description = "Gggez örneklerinde astroblasto'nun uygulanışı. Öğrenim amaçlı."

[dependencies]
ggez = { workspace = true }
oorandom="11.1.3"
getrandom = "0.4.2"
glam={ version = "0.32.1", features = ["mint"]}