[package]
name = "slam-dunk-manager"
version = "0.1.0"
edition = "2021"
description = "It's simple terminal game about 3X3 basketball league managmenet"
authors=["Burak Selim Senyurt"]

[dependencies]
bincode = "1.3.3"
chrono = { version = "0.4.34", features = ["serde"] }
clearscreen = "2.0.1"
press-btn-continue = "0.2.0"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
serde_derive = "1.0.196"
tokio = { version = "1.36.0", features = ["full"] }
