[package]
name = "pacman"
version = "0.1.0"
edition = "2021"

[dependencies]
piston = { workspace = true }
piston-texture = { workspace = true }
piston2d-graphics = { workspace = true }
piston2d-opengl_graphics = { workspace = true }
piston_window = { workspace = true }
pistoncore-glutin_window = { workspace = true }
