[package]
name = "spining-square"
version = "0.1.0"
edition = "2021"
description = "Piston oyun motoruna ait getting started örneği"

[dependencies]
piston = { workspace = true }
piston2d-graphics = { workspace = true }
pistoncore-glutin_window = { workspace = true }
piston2d-opengl_graphics = { workspace = true }
